--- a/src/theme/app/_toolbar.scss
+++ b/src/theme/app/_toolbar.scss
@@ -1,12 +1,12 @@
 #app-mount {
 	.title-3qD0b-,
-	.container_fc4f04 {
+	.container__9293f {
 		background: var(--background);
 	}
-	.children_fc4f04:after {
+	.children__9293f:after {
 		content: none;
 	}
-	.searchBar_a46bef {
+	.searchBar__97492 {
 		background: var(--background-dark);
 	}
 }
