--- a/src/theme/app/_tooltips.scss
+++ b/src/theme/app/_tooltips.scss
@@ -12,10 +12,10 @@
 	.tooltipContent-Nejnvh {
 		color: var(--text-focus);
 		font-weight: var(--font-weight-bold);
-		.guildNameText_a6ae3c {
+		.guildNameText_b1f768 {
 			color: var(--text-focus);
 		}
-		.muteText_a6ae3c {
+		.muteText_b1f768 {
 			color: var(--text-normal);
 		}
 	}
