--- a/src/theme/chat/_container.scss
+++ b/src/theme/chat/_container.scss
@@ -1,17 +1,17 @@
 #app-mount {
-	.chat_a7d72e {
+	.chat_f75fb0 {
 		background: var(--background);
-		.scrollerSpacer_e2e187 {
+		.scrollerSpacer__36d07 {
 			height: 25px;
 		}
-		.content_a7d72e:before {
+		.content_f75fb0:before {
 			content: none;
 		}
 	}
-	.chatContent_a7d72e {
+	.chatContent_f75fb0 {
 		background: transparent;
 	}
-	.operations_baf0d6 > a {
+	.operations_bab751 > a {
 		color: rgb(var(--accent), 1);
 	}
 }
