--- a/src/theme/chat/_threads.scss
+++ b/src/theme/chat/_threads.scss
@@ -1,16 +1,16 @@
 #app-mount {
-	.container_d1c246 {
+	.container__01ae2 {
 		background: var(--background);
 	}
-	.divider_af45f8 {
+	.divider_ee23ac {
 		background: var(--background-light);
 	}
-	.container_b385c8 {
+	.container__34c2c {
 		background: transparent;
 		border: none;
 		padding-right: 8px;
 	}
-	.chat_d6c7e0::before {
+	.chat_a44415::before {
 		content: none;
 	}
 }
