--- a/src/theme/guilds/_folder.scss
+++ b/src/theme/guilds/_folder.scss
@@ -1,8 +1,8 @@
 #app-mount {
-	.expandedFolderBackground_bc7085 {
+	.expandedFolderBackground__48112 {
 		background: var(--background-light);
 	}
-	.folder_bc7085 {
+	.folder__48112 {
 		background: var(--background-light);
 	}
 }
