--- a/src/theme/guilds/_server.scss
+++ b/src/theme/guilds/_server.scss
@@ -11,10 +11,10 @@
 	}
 
 	// Add/Join server & Server Discovery
-	.circleIconButton_db6521 {
+	.circleIconButton__5bc7e {
 		background: var(--background-light);
 		&:hover,
-		&.selected_db6521 {
+		&.selected__5bc7e {
 			background: rgb(var(--discord-green) / 1);
 		}
 	}
