--- a/src/theme/inputs/_button.scss
+++ b/src/theme/inputs/_button.scss
@@ -1,6 +1,6 @@
 #app-mount {
 	// Brand/Blurple buttons
-	.lookFilled_dd4f85.colorBrand_dd4f85 {
+	.lookFilled__201d5.colorBrand__201d5 {
 		background: rgb(var(--accent), 1);
 		color: var(--accent-text);
 		font-weight: 600;
@@ -21,7 +21,7 @@
 	}
 
 	// Panel buttons
-	.button_dd4f85.buttonColor_adcaac {
+	.button__201d5.buttonColor_e131a9 {
 		background: var(--background-light);
 		&:hover {
 			background: rgb(var(--accent), 1);
