--- a/src/theme/inputs/_radiogroup.scss
+++ b/src/theme/inputs/_radiogroup.scss
@@ -1,35 +1,35 @@
 #app-mount {
-	[role='radiogroup'] .item_eb92a8 {
+	[role='radiogroup'] .item__001a7 {
 		background: var(--background-alt);
 		&:hover {
 			background: var(--background-light);
 		}
 		&[aria-checked='true'] {
-			.radioBar_eb92a8 {
+			.radioBar__001a7 {
 				background: rgb(var(--accent));
 				color: var(--accent-text);
 				&[style*='--radio-bar-accent-color'] {
 					background: var(--radio-bar-accent-color);
 					color: #fff;
-					.radioIconForeground_eb92a8 {
+					.radioIconForeground__001a7 {
 						color: #fff;
 					}
 				}
 			}
-			.radioIconForeground_eb92a8,
+			.radioIconForeground__001a7,
 			.colorStandard-21JIj7,
 			.colorHeaderSecondary-g5teka {
 				color: var(--accent-text);
 			}
 		}
 	}
-	.children_a6ae9b > .marginBottom40_f7730b .item_eb92a8,
-	.marginBottom20_f7730b .item_eb92a8 {
+	.children__7bffb > .marginBottom40_fd297e .item__001a7,
+	.marginBottom20_fd297e .item__001a7 {
 		background: var(--background-alt);
 		&[aria-checked='true'] {
 			background: rgb(var(--accent));
 			color: var(--accent-text);
-			.radioIconForeground_eb92a8 {
+			.radioIconForeground__001a7 {
 				color: var(--accent-text);
 			}
 		}
@@ -37,10 +37,10 @@
 
 	// Menu Radio
 	[role='menuitemradio'][aria-checked='true'] {
-		.radioSelection_d90b3d {
+		.radioSelection_c1e9c4 {
 			color: rgb(var(--accent), 1);
 		}
-		&.focused_d90b3d .radioSelection_d90b3d {
+		&.focused_c1e9c4 .radioSelection_c1e9c4 {
 			color: #fff;
 		}
 	}
