--- a/src/theme/members/_container.scss
+++ b/src/theme/members/_container.scss
@@ -1,7 +1,7 @@
 #app-mount {
-	.container_cbd271,
-	.members_cbd271,
-	.members_cbd271 > div {
+	.container_c8ffbb,
+	.members_c8ffbb,
+	.members_c8ffbb > div {
 		background: transparent;
 	}
 }
