--- a/src/theme/modals/_deletemessage.scss
+++ b/src/theme/modals/_deletemessage.scss
@@ -1,7 +1,7 @@
-#app-mount .message_ddcc45 {
+#app-mount .message__89466 {
 	background: var(--background-alt);
 	box-shadow: none;
-	.cozy_f9f2ca {
+	.cozy_c19a55 {
 		margin: 0 !important;
 	}
 }
