--- a/src/theme/modals/_modal.scss
+++ b/src/theme/modals/_modal.scss
@@ -1,16 +1,16 @@
 #app-mount {
 	.modal-3O0aXp,
-	.root_f9a4c9 {
+	.root__49fc1 {
 		background: var(--background-alt);
 		box-shadow: var(--box-shadow);
 	}
-	.header_f9a4c9 {
+	.header__49fc1 {
 		box-shadow: none;
 	}
 	.content-18dVld {
 		padding: 0 24px 24px 24px;
 	}
-	.footer_f9a4c9 {
+	.footer__49fc1 {
 		background: var(--background);
 		box-shadow: none;
 		padding: 24px;
