--- a/src/theme/modals/_uploadfile.scss
+++ b/src/theme/modals/_uploadfile.scss
@@ -1,12 +1,12 @@
-#app-mount .uploadModal_f82cc7 {
+#app-mount .uploadModal_dbca3c {
 	background: var(--background);
 	border-radius: var(--border-radius);
 	box-shadow: var(--box-shadow);
-	.footer_f82cc7 {
+	.footer_dbca3c {
 		background: var(--background-alt);
 		box-shadow: none;
 	}
-	.slateTextArea_e52116 {
+	.slateTextArea_ec4baf {
 		padding-left: 15px;
 	}
 }
