--- a/src/theme/popouts/_emojipicker.scss
+++ b/src/theme/popouts/_emojipicker.scss
@@ -1,13 +1,13 @@
 #app-mount {
-	.contentWrapper_af5dbb {
+	.contentWrapper__08434 {
 		background: var(--background-light-alt);
 		box-shadow: var(--box-shadow);
 		border-radius: var(--border-radius);
 	}
-	.scroller_d53d65::-webkit-scrollbar {
+	.scroller_affa7e::-webkit-scrollbar {
 		display: none;
 	}
-	.container_effbe2 {
+	.container_fea832 {
 		background: var(--background);
 		border: 1px solid var(--background);
 		transition: border-color 0.15s ease;
@@ -23,18 +23,18 @@
 		background: var(--background);
 	}
 
-	.list_a3bc57 {
-		.listItems_d53d65 {
+	.list_c656ac {
+		.listItems_affa7e {
 			left: 0 !important;
 		}
 		ul[role='row'] {
 			padding-left: 8px;
 		}
-		.wrapper_e06857 {
+		.wrapper__14245 {
 			background: var(--background-light-alt);
 			padding-left: 12px;
 		}
-		.inspector_c3120f {
+		.inspector_aeaaeb {
 			background: var(--background-light);
 		}
 	}
