--- a/src/theme/popouts/_inbox.scss
+++ b/src/theme/popouts/_inbox.scss
@@ -1,12 +1,12 @@
 #app-mount {
-	.container_ddb5b4 {
+	.container__95796 {
 		margin: 20px 0;
 	}
-	.channelHeader_f3978e {
+	.channelHeader__35a7e {
 		background: var(--background-light-alt);
 		padding: 16px;
 	}
-	.messageContainer_ddb5b4 {
+	.messageContainer__95796 {
 		border-radius: 0 0 var(--border-radius) var(--border-radius);
 		background: var(--background-alt);
 	}
