--- a/src/theme/popouts/_pins.scss
+++ b/src/theme/popouts/_pins.scss
@@ -1,19 +1,19 @@
 #app-mount {
-	.messagesPopoutWrap_ac90a2 {
+	.messagesPopoutWrap__45690 {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
 		border-radius: var(--border-radius);
 	}
-	.header_ac90a2 {
+	.header__45690 {
 		background: var(--background-alt);
 		box-shadow: var(--box-shadow);
 		z-index: 2;
 	}
-	.messageGroupWrapper_ac90a2 {
+	.messageGroupWrapper__45690 {
 		background: var(--background-alt);
 		border: none;
 	}
-	.messageGroupCozy_ac90a2 {
+	.messageGroupCozy__45690 {
 		margin: 0 !important;
 		padding: 8px 8px 8px 0 !important;
 	}
