--- a/src/theme/settings/guild/_roles.scss
+++ b/src/theme/settings/guild/_roles.scss
@@ -1,12 +1,12 @@
 #app-mount {
-	.sidebar_e87574 {
+	.sidebar_e29cd7 {
 		border: none;
 	}
-	.titleContainer_e87574 {
+	.titleContainer_e29cd7 {
 		background: var(--background);
 		box-shadow: none;
 	}
-	.header_bd05f1 {
+	.header_c6bf1b {
 		background: var(--background);
 		box-shadow: none;
 	}
