--- a/src/theme/settings/user/_authapps.scss
+++ b/src/theme/settings/user/_authapps.scss
@@ -1,5 +1,5 @@
-#app-mount .layer_d4b6c5:not(.baseLayer_d4b6c5) {
-	.authedApp_f0135d {
+#app-mount .layer__960e4:not(.baseLayer__960e4) {
+	.authedApp__50a54 {
 		background: var(--background-alt);
 		border-radius: var(--border-radius);
 		border: none;
