--- a/src/theme/settings/user/_voicevideo.scss
+++ b/src/theme/settings/user/_voicevideo.scss
@@ -1,5 +1,5 @@
 #app-mount [aria-label='GUILD_SETTINGS'] {
-	.children_a6ae9b > .flex-1xMQg5.flex_ec1a20 {
+	.children__7bffb > .flex-1xMQg5.flex_abf706 {
 		background: var(--background-alt);
 		border-radius: var(--border-radius);
 		padding: 16px;
@@ -9,7 +9,7 @@
 		border-radius: var(--border-radius);
 		padding: 16px;
 		margin-top: 20px;
-		.marginTop8_f7730b {
+		.marginTop8_fd297e {
 			margin-top: 0;
 		}
 	}
