--- a/src/theme/sidebar/_header.scss
+++ b/src/theme/sidebar/_header.scss
@@ -1,18 +1,18 @@
 #app-mount {
-	.selected_fd6364 .header_fd6364 {
+	.selected_f37cb1 .header_f37cb1 {
 		background: transparent;
 	}
-	.header_fd6364 {
+	.header_f37cb1 {
 		box-shadow: none;
 		&:hover {
 			background: transparent;
 		}
 	}
 
-	.searchBar_f0963d {
+	.searchBar__35e86 {
 		box-shadow: none;
 	}
-	.searchBarComponent_f0963d {
+	.searchBarComponent__35e86 {
 		background: var(--background-dark);
 	}
 }
