--- a/src/theme/sidebar/_panels.scss
+++ b/src/theme/sidebar/_panels.scss
@@ -1,12 +1,12 @@
 #app-mount {
-	.panels_a4d4d9 {
+	.panels_c48ade {
 		background: var(--background);
 	}
-	.activityPanel_a4d4d9 .container_b2ca13 {
+	.activityPanel_c48ade .container__37e49 {
 		background: transparent;
 	}
-	.container_b2ca13,
-	.activityPanel_a4d4d9 {
+	.container__37e49,
+	.activityPanel_c48ade {
 		background: transparent;
 		border: none;
 	}
