--- a/src/theme/app/_app.scss
+++ b/src/theme/app/_app.scss
@@ -1,4 +1,4 @@
-#app-mount .bg_d4b6c5 {
+#app-mount .bg__960e4 {
 	background: var(--background-dark);
 }
 
@@ -7,7 +7,7 @@
 	color: var(--accent-text);
 }
 
-#app-mount .info_c5a741 .line_c5a741:first-child:before {
+#app-mount .info__2debe .line__2debe:first-child:before {
 	content: 'MinimalCord ' var(--minimalcord-version);
 	display: block;
 }
