--- a/src/theme/guilds/_container.scss
+++ b/src/theme/guilds/_container.scss
@@ -1,9 +1,9 @@
-#app-mount .guilds_a4d4d9 {
+#app-mount .guilds_c48ade {
 	background: var(--background-dark);
-	.footer_aa1bff {
+	.footer__214dc {
 		--background-tertiary: var(--background-dark);
 	}
-	.scrollerBase_c49869 {
+	.scrollerBase_d125d2 {
 		background: var(--background-dark);
 		&::-webkit-scrollbar {
 			display: none;
