--- a/src/theme/members/_member.scss
+++ b/src/theme/members/_member.scss
@@ -1,26 +1,26 @@
-#app-mount .member_a31c43 {
+#app-mount .member__5d473 {
 	background: transparent;
 	.botTagRegular_c89c9a {
 		background: rgb(var(--accent), 1);
 		color: var(--accent-text);
-		.botText_a9e77f {
+		.botText__82f07 {
 			font-weight: 600;
 		}
 	}
 
-	&:hover .layout_d808b0 {
+	&:hover .layout__91a9d {
 		background: var(--background-alt);
 	}
-	&:active .layout_d808b0 {
+	&:active .layout__91a9d {
 		background: var(--background-light);
 	}
-	&.selected_d808b0 .layout_d808b0 {
+	&.selected__91a9d .layout__91a9d {
 		background: rgb(var(--accent), 1);
 		.roleColor-rz2vM0,
-		.activity_a31c43,
+		.activity__5d473,
 		.premiumIcon-1rDbWQ,
-		.username_a31c43,
-		.username_a31c43 span {
+		.username__5d473,
+		.username__5d473 span {
 			color: var(--accent-text) !important;
 		}
 		rect[fill='#43b581'],
