--- a/src/theme/modals/_quickswitcher.scss
+++ b/src/theme/modals/_quickswitcher.scss
@@ -1,11 +1,11 @@
 #app-mount {
-	.quickswitcher_f4e139 {
+	.quickswitcher_ac6cb0 {
 		background: var(--background);
 	}
-	.scroller_f4e139 {
+	.scroller_ac6cb0 {
 		background: transparent;
 	}
-	.input_f4e139 {
+	.input_ac6cb0 {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
 		padding: 0 24px;
