--- a/src/theme/modals/_userprofile.scss
+++ b/src/theme/modals/_userprofile.scss
@@ -1,9 +1,9 @@
 #app-mount .root-8LYsGj {
 	// Global styles
 	.size12-oc4dx4,
-	.activityName_c1d9fd,
-	.nameNormal_c1d9fd,
-	.nameWrap_c1d9fd {
+	.activityName__2ef49,
+	.nameNormal__2ef49,
+	.nameWrap__2ef49 {
 		color: var(--text-normal);
 	}
 
@@ -64,7 +64,7 @@
 	}
 
 	&[style*='--user-background'] {
-		.banner_c3e427:not(.bannerPremium_c3e427) {
+		.banner__68edb:not(.bannerPremium_c3e427) {
 			height: 240px;
 			background: var(--user-background) center/cover;
 		}
