--- a/src/theme/popouts/_autocomplete.scss
+++ b/src/theme/popouts/_autocomplete.scss
@@ -1,8 +1,8 @@
 #app-mount {
-	.autocomplete_bcc24e {
+	.autocomplete__13533 {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
-		.categoryHeader_fe2299 {
+		.categoryHeader_d1405b {
 			background: var(--background-light);
 		}
 	}
