--- a/src/theme/popouts/_search.scss
+++ b/src/theme/popouts/_search.scss
@@ -1,9 +1,9 @@
 #app-mount {
-	.container_eedf95 {
+	.container__55c99 {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
 	}
-	.option_b0286e {
+	.option__56fec {
 		&:after {
 			background: linear-gradient(90deg, transparent, var(--background-light));
 		}
