--- a/src/theme/popouts/_userpopout.scss
+++ b/src/theme/popouts/_userpopout.scss
@@ -7,7 +7,7 @@
 		.roles_fa2f72 {
 			gap: 4px;
 		}
-		.role_f9575e {
+		.role_dfa8b6 {
 			margin: 0;
 			background: transparent;
 			position: relative;
@@ -15,7 +15,7 @@
 			overflow: hidden;
 			gap: 6px;
 			padding: 6px;
-			.roleCircle_a26d7b {
+			.roleCircle__4f569 {
 				position: unset;
 				overflow: visible;
 				filter: none;
@@ -30,17 +30,17 @@
 					pointer-events: none;
 				}
 			}
-			.roleRemoveButton_f9575e {
+			.roleRemoveButton_dfa8b6 {
 				position: unset;
-				& + .roleName_e4010c {
+				& + .roleName__48c1c {
 					position: relative;
 					z-index: 1;
 				}
 			}
-			.roleRemoveIcon_e4010c {
+			.roleRemoveIcon__48c1c {
 				left: 12px;
 			}
-			.roleName_e4010c {
+			.roleName__48c1c {
 				margin: 0;
 				color: var(--text-focus);
 			}
