--- a/src/theme/settings/user/_myaccount.scss
+++ b/src/theme/settings/user/_myaccount.scss
@@ -1,9 +1,9 @@
-#app-mount .layer_d4b6c5:not(.baseLayer_d4b6c5) {
-	.accountProfileCard_b69b77 {
+#app-mount .layer__960e4:not(.baseLayer__960e4) {
+	.accountProfileCard__1fed1 {
 		background: var(--background-alt);
 	}
-	.background_b69b77,
-	.fieldList_b69b77 {
+	.background__1fed1,
+	.fieldList__1fed1 {
 		background: var(--background);
 	}
 }
