--- a/src/theme/sidebar/_channel.scss
+++ b/src/theme/sidebar/_channel.scss
@@ -1,17 +1,17 @@
 #app-mount {
-	.wrapper_d8bfb3 {
+	.wrapper__2ea32 {
 		height: auto;
 		margin-bottom: 2px;
-		&.modeMuted_d8bfb3 .name_d8bfb3 {
+		&.modeMuted__2ea32 .name__2ea32 {
 			color: var(--text-muted);
 		}
 
-		&.modeUnreadImportant_d8bfb3 .icon_d8bfb3 {
+		&.modeUnreadImportant__2ea32 .icon__2ea32 {
 			color: var(--text-focus);
 		}
 
-		&.modeSelected_d8bfb3 {
-			.icon_d8bfb3 {
+		&.modeSelected__2ea32 {
+			.icon__2ea32 {
 				color: var(--text-focus);
 			}
 			&:before {
@@ -25,27 +25,27 @@
 			}
 		}
 
-		&.typeThread_d8bfb3 .link_d8bfb3 {
+		&.typeThread__2ea32 .link__2ea32 {
 			padding-left: 42px;
 		}
 	}
-	.spine_e1e976 {
+	.spine__5b40b {
 		z-index: 1;
 	}
-	.wrapper_d8bfb3 {
+	.wrapper__2ea32 {
 		margin-left: 0;
 		border-radius: 0 var(--border-radius) var(--border-radius) 0;
 	}
-	.link_d8bfb3 {
+	.link__2ea32 {
 		padding-left: 16px;
 	}
-	.unread_d8bfb3 {
+	.unread__2ea32 {
 		z-index: 2;
 		left: 0;
 	}
 
 	// Voice
-	.avatarSpeaking_d80634 {
+	.avatarSpeaking__07f91 {
 		box-shadow:
 			inset 0 0 0 2px rgb(var(--accent), 1),
 			inset 0 0 0 3px var(--background);
