--- a/src/theme/sidebar/_container.scss
+++ b/src/theme/sidebar/_container.scss
@@ -1,6 +1,6 @@
 #app-mount {
-	.container_ee69e0,
-	.sidebar_a4d4d9 {
+	.container__2637a,
+	.sidebar_c48ade {
 		background: var(--background);
 	}
 }
