--- a/src/theme/sidebar/_dms.scss
+++ b/src/theme/sidebar/_dms.scss
@@ -1,16 +1,16 @@
 #app-mount {
-	.privateChannels_f0963d {
+	.privateChannels__35e86 {
 		background: transparent;
-		.scroller_c47fa9 {
+		.scroller__99e7c {
 			background: transparent;
 		}
 	}
-	.channel_c91bad {
+	.channel__972a0 {
 		margin-left: 0;
 		border-radius: 0 4px 4px 0;
 		padding: 0;
 		margin-bottom: 3px;
-		.layout_ec8679 {
+		.layout__20a53 {
 			border-radius: 0 var(--border-radius) var(--border-radius) 0;
 			padding-left: 16px;
 		}
