Fixed Card design on List-view, worked only on Gallery view by accident

--- a/src/theme/chat/_forum.scss
+++ b/src/theme/chat/_forum.scss
@@ -58,7 +58,7 @@
   }
 
   /* Cards */
-  .container__9a337 {
+  .container__9a337, .container_faa96b  {
 	background: var(--background-alt);
   }
 
