--- a/src/theme/chat/_message.scss
+++ b/src/theme/chat/_message.scss
@@ -132,6 +132,11 @@
 					top: 32px;
 				}
 			}
+   			// Reset role icon positioning in replies
+   			img.roleIcon_c19a55 {
+     			top: unset;
+     			position: unset;
+   			}
 			&:before {
 				border-color: var(--text-muted);
 			}
