--- a/src/theme/members/_member.scss
+++ b/src/theme/members/_member.scss
@@ -1,6 +1,6 @@
 #app-mount .member__5d473 {
 	background: transparent;
-	.botTagRegular_c89c9a {
+	.botTagRegular__82f07 {
 		background: rgb(var(--accent), 1);
 		color: var(--accent-text);
 		.botText__82f07 {
@@ -10,27 +10,18 @@
 
 	&:hover .layout__91a9d {
 		background: var(--background-alt);
+        width: 100%;
 	}
 	&:active .layout__91a9d {
 		background: var(--background-light);
+        width: 100%;
 	}
 	&.selected__91a9d .layout__91a9d {
-		background: rgb(var(--accent), 1);
-		.roleColor-rz2vM0,
-		.activity__5d473,
-		.premiumIcon-1rDbWQ,
-		.username__5d473,
-		.username__5d473 span {
-			color: var(--accent-text) !important;
-		}
-		rect[fill='#43b581'],
-		rect[fill='#faa61a'],
-		rect[fill='#f04747'] {
-			fill: #fff;
-		}
-		.botTagRegular_c89c9a {
-			background: var(--accent-text);
-			color: rgb(var(--accent), 1);
-		}
-	}
+		background: var(--background-light);
+        width: 100%;    
+    }
+    .childContainer__91a9d {
+        padding-right: 0%;
+        padding-left: 0%;
+    }
 }
