Fix mini bar below profile modal

--- a/src/theme/sidebar/_container.scss
+++ b/src/theme/sidebar/_container.scss
@@ -1,6 +1,7 @@
 #app-mount {
 	.container__2637a,
-	.sidebar_c48ade {
+	.sidebar_c48ade,
+	.sidebar_c48ade:after {
 		background: var(--background);
 	}
 }
