--- a/src/theme/popouts/_inbox.scss
+++ b/src/theme/popouts/_inbox.scss
@@ -9,5 +9,43 @@
 	.messageContainer__95796 {
 		border-radius: 0 0 var(--border-radius) var(--border-radius);
 		background: var(--background-alt);
+		border: none;
+	}
+
+	.messagesScroller__4ad69 { /* bookmarks scroller background */
+	    background: var(--background-light);
+	}
+
+	.messageContainer__4ad69 { /* bookmarked messages */
+		background: var(--background-alt);
+  	    border: none;
+	}
+
+	.message__4ad69 { /* bookmarked message bottom half */
+		margin-top: 10px!important;
+	}
+
+	.channelHeader__35a7e { /* mentioned messages header */
+  		border-radius: 6px;
+  		margin-left: 15px;
+	}
+
+	.scroller__2692d { /* unreads scroller background */
+  		background: var(--background-light);
+	}
+
+	.messages__1ccd1 { /* unreads messages content box */
+  		background: var(--background-alt);
+  		border: none;
+	}
+
+	.channel__427f0 .channelHeader__35a7e { /* unreads header */
+  		margin-left: unset;
+    	position: unset;
+	}
+
+	.container__0f711 { /* "For You" tab */
+    	background: var(--background-light);
+    	padding-left: 15px;
 	}
 }
